<!-- activity_edit_mahasiswa.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300sp"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_marginTop="50dp"
    >
    <EditText
        android:id="@+id/editNamaMahasiswa"
        android:labelFor="@id/editNamaMahasiswa"
        android:fontFamily="@font/poppinsregular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/input_dashboard_lang_idID_name"
        android:inputType="text"
        android:hint="@string/input_dashboard_lang_idID_name"
        android:backgroundTint="@color/black"
        android:ems="15"/>
    <EditText
        android:id="@+id/editJurusan"
        android:labelFor="@id/editJurusan"
        android:fontFamily="@font/poppinsregular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:backgroundTint="@color/black"
        android:ems="15"
        android:autofillHints="@string/input_dashboard_lang_idID_jurusan"
        android:hint="@string/input_dashboard_lang_idID_jurusan" />
    <EditText
        android:id="@+id/editNIM"
        android:labelFor="@id/editNIM"
        android:fontFamily="@font/poppinsregular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:autofillHints="@string/input_dashboard_lang_idID_NIM"
        android:ems="15"
        android:backgroundTint="@color/black"
        android:hint="@string/input_dashboard_lang_idID_NIM" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:paddingBottom="16dp"
        android:paddingTop="16dp">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lang_idID_save"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btnBackToViewMahasiswa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_lang_idID_back_to_view_mahasiswa"
            android:backgroundTint="@android:color/holo_red_light"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>
